--- a/turlututu/style.css
+++ b/turlututu/style.css
@@ -1,22 +1,287 @@
-body{
-    margin: 0;
+body {
+  font-family: "Oswald", sans-serif;
+  margin: 0;
 }
+
+p {
+  line-height: 145%;
+}
+
+/*-----------------------------------*/
+/*---------------NAVBAR--------------*/
+/*-----------------------------------*/
+nav {
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+nav ul {
+  list-style: none;
+  background-color: #333333;
+  padding: 0;
+  padding-left: 150px;
+  margin: 0;
+}
+nav li {
+  font-size: 14px;
+  line-height: 40px;
+  height: 42px;
+  display: inline-block;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+}
+
+nav li:last-child {
+  margin-top: 5px;
+  float: right;
+  margin-right: 150px;
+}
+
+nav img {
+  margin-top: 5px;
+  width: auto;
+  height: 24px;
+}
+
+/*-----------------------------------*/
+/*---------------HEADER--------------*/
+/*-----------------------------------*/
 
 header {
-    width: 400px;
-    margin:0;
-    padding: 0;
+  padding: 80px 200px;
+  background-color: #1c8bc2;
+  height: 355px;
+  display: flex;
+}
+header h1 {
+  font-size: 170%;
+  text-align: center;
+  color: #fff;
 }
 
-li {
-    display: inline-block;
+.first-headerd img {
+  height: 230px;
+  width: auto;
+}
+.sec-headerd {
+  padding-left: 80px;
 }
 
-nav {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #333333;
-    color: white;
-    list-style-type: none;
-  }
+.sec-headerd * {
+  margin-bottom: 20px;
+}
+
+.sec-headerd img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  height: 70px;
+  width: auto;
+  text-align: center;
+}
+
+.sec-headerd button {
+  background-color: #e99002;
+  border: 2px solid white;
+  border-radius: 12px;
+  margin-right: auto;
+  margin-left: auto;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  font-size: 25px;
+}
+
+/*-----------------------------------*/
+/*----------FIRST SECTION------------*/
+/*-----------------------------------*/
+
+.first-section {
+  background-color: white;
+  padding: 20px;
+}
+
+.first-section h2 {
+  font-size: 170%;
+  text-align: center;
+}
+
+/*-----------------------------------*/
+/*----------SECOND SECTION-----------*/
+/*-----------------------------------*/
+
+.sec-section {
+  background-color: #1c8bc2;
+  padding: 0 200px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  color: white;
+}
+
+.sec-section h2 {
+  font-size: 150%;
+  margin-bottom: 20px;
+}
+
+.sec-section .gr {
+  padding: 20px;
+}
+
+/*-----------------------------------*/
+/*----------THIRD SECTION------------*/
+/*-----------------------------------*/
+
+.third-section {
+  background-color: white;
+  padding: 20px;
+}
+
+.third-section h2 {
+  font-size: 140%;
+  text-align: center;
+  color: rgb(112, 112, 112);
+}
+
+/*-----------------------------------*/
+/*----------FORTH SECTION------------*/
+/*-----------------------------------*/
+
+.forth-section {
+  background-color: #eeeeee;
+  padding: 0 400px;
+}
+.flex {
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.flex img {
+  margin: 20px;
+  width: auto;
+  height: 45px;
+}
+
+.pas-flex {
+  width: auto;
+  height: 100px;
+}
+
+.pas-flex {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*-----------------------------------*/
+/*----------FIFTH SECTION------------*/
+/*-----------------------------------*/
+
+.fifth-section {
+  text-align: center;
+  padding: 80px;
+  padding-bottom: 120px;
+}
+
+.b1 {
+  background-color: #165882;
+  border: 2px solid white;
+  border-radius: 12px;
+  margin-right: auto;
+  margin-left: auto;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+}
+.b2 {
+  background-color: #165882;
+  border: 2px solid white;
+  border-radius: 12px;
+  margin-right: auto;
+  margin-left: auto;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+}
+.o1 {
+  background-color: #e99002;
+  border: 2px solid white;
+  border-radius: 12px;
+  margin-right: auto;
+  margin-left: auto;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+}
+
+/*-----------------------------------*/
+/*---------------FOOTER--------------*/
+/*-----------------------------------*/
+
+footer {
+  height: 60px;
+  background-color: black;
+}
+
+footer ul {
+  list-style: none;
+  background-color: black;
+  padding-top: 10px;
+  margin: 0;
+}
+footer li {
+  font-size: 14px;
+  line-height: 40px;
+  height: 42px;
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 10px;
+  border-right: 1px dotted #fff;
+}
+
+footer a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer li:last-child {
+  margin-top: 5px;
+  float: right;
+  margin-right: 150px;
+  border: none;
+}
+
+footer li:nth-child(5){
+    border: none;
+}
+
+/*-----------------------------------*/
+/*---------Floating button-----------*/
+/*-----------------------------------*/
+
+.botom-btn {
+    position:fixed;
+    background-color: #165882;
+    border-radius: 100%;
+    right:0;
+    bottom:0;
+    margin: 40px; 
+}
